Fix dialog on mobile (#5351)

--- a/packages/core/src/dialog/DialogContent.css
+++ b/packages/core/src/dialog/DialogContent.css
@@ -9,6 +9,7 @@
   /* auto is needed for support on Safari, due to webkit bugs with flex */
   flex: 1 1 auto;
   position: relative;
+  display: flex;
 }
 
 .saltDialogContent-inner {
